2011-12-02  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (listener-channel): Moved to contrib/swank-mrepl.lisp
	(create-listener, initial-listener-bindings, spawn-listener-thread).

2011-12-01  Helmut Eller  <heller@common-lisp.net>

	* swank-sbcl.lisp (wait-for-input): Call poll(2).
	* swank-backend.lisp (wait-for-streams, wait-for-one-stream):
	Deleted. Wouldn't work on binary streams.

2011-12-01  Helmut Eller  <heller@common-lisp.net>

	* swank-loader.lisp (*contribs*): Add swank-util.

2011-12-01  Helmut Eller  <heller@common-lisp.net>

	* swank-cmucl.lisp (method-location): Special case accessors.

2011-11-29  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (do-symbols*, classify-symbol)
	(symbol-classification-string): Moved to contrib/swank-util.lisp.

2011-11-29  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (to-line): Increase default limit to 512.
	(frame-locals-for-emacs): Let *print-right-margin* override
	default line width.

2011-11-27  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (create-server): Add a :backlog argument.
	(setup-server): Pass it along.

	* swank-backend.lisp (create-socket): Backlog argument.
	* swank-abcl.lisp: Implement it.
	* swank-allegro.lisp:
	* swank-ccl.lisp:
	* swank-clisp.lisp:
	* swank-cmucl.lisp:
	* swank-corman.lisp:
	* swank-ecl.lisp:
	* swank-lispworks.lisp:
	* swank-sbcl.lisp:
	* swank-scl.lisp:

2011-11-27  Helmut Eller  <heller@common-lisp.net>

	* swank-cmucl.lisp (make-socket-io-stream): Create character
	stream if external-format is non-nil.

2011-11-27  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (create-server): Remove coding-system argument.
	([defstruct] connection): Remove coding-system slot.
	(connection.external-format, *coding-system*): Deleted.
	(make-connection, start-server, create-server, setup-server)
	(accept-connections): Drop coding-system arg.

	(connection-info): Return supported coding systems.
	(create-repl, open-dedicated-output-stream)